Add comment explaining `--add-opens`